small fix of map on mobile

--- a/src/routes/AppRoutes/Place/place.module.css
+++ b/src/routes/AppRoutes/Place/place.module.css
@@ -173,7 +173,7 @@ h3, h2 {
 
 @media (max-width: 768px) {
     .mapContainer {
-        height: 300px;
+        height: 200px;
         width: 100%;
     }
 }
